Started work on the container

--- a/demo-website/src/index.css
+++ b/demo-website/src/index.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  display: grid;
+  background-color: #38bdf8;
+  justify-content: center;
+  align-content: center;
+}
